[gd_scene load_steps=4 format=3 uid="uid://cro8c5rl6gevw"]

[ext_resource type="Theme" uid="uid://du7hqtwwqg5mp" path="res://resources/new_theme_global.tres" id="1_04qyp"]
[ext_resource type="Script" uid="uid://bfcd5su0eewnd" path="res://scripts/menu_option_manager.gd" id="2_4vge2"]
[ext_resource type="PackedScene" uid="uid://cmr7bf7dr53ex" path="res://scenes/graph_edit.tscn" id="3_rnjyy"]

[node name="Control2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_04qyp")

[node name="MenuHandler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_4vge2")

[node name="SaveFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(659, 360)
access = 2
filters = PackedStringArray("*.tres", "*.json")

[node name="OpenFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.tres", "*.json")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
anchor_right = 0.999
offset_right = 0.152954
offset_bottom = 34.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="MenuBar" type="MenuBar" parent="Panel"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 35.0

[node name="FileMenuPopup" type="PopupMenu" parent="Panel/MenuBar"]
unique_name_in_owner = true
title = "File"
size = Vector2i(147, 100)
item_count = 3
item_0/text = "New Graph"
item_0/id = 0
item_1/text = "Save"
item_1/id = 1
item_2/text = "Save as"
item_2/id = 2

[node name="OpenMenuPopup" type="PopupMenu" parent="Panel/MenuBar"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open"
size = Vector2i(123, 100)
item_count = 1
item_0/text = "Open a Graph"
item_0/id = 0

[node name="Create" type="PopupMenu" parent="Panel/MenuBar"]
unique_name_in_owner = true
item_count = 1
item_0/text = "Create new node"
item_0/id = 0

[node name="About" type="PopupMenu" parent="Panel/MenuBar"]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="GraphEdit" parent="VBoxContainer" instance=ExtResource("3_rnjyy")]
layout_mode = 2

[connection signal="file_selected" from="SaveFileDialog" to="MenuHandler" method="_on_save_file_dialog_file_selected"]
[connection signal="file_selected" from="OpenFileDialog" to="MenuHandler" method="_on_open_file_dialog_file_selected"]
[connection signal="id_pressed" from="Panel/MenuBar/FileMenuPopup" to="MenuHandler" method="_on_file_menu_popup_id_pressed"]
[connection signal="id_pressed" from="Panel/MenuBar/OpenMenuPopup" to="MenuHandler" method="_on_open_menu_popup_id_pressed"]
[connection signal="id_pressed" from="Panel/MenuBar/Create" to="MenuHandler" method="_on_create_id_pressed"]
